test/conformance/chainsaw/image-validating-policies/standard/cosign-keyless-additional-extensions/pass/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-keyless-pass
